# adaptive-clip-llm-video

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md  chainlit_app.py  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
configs/hardware/: api_first.yaml  local_tiny.yaml
configs/task/: caption.yaml  qa.yaml  retrieval.yaml  temporal.yaml
scripts/: __init__.py  download_dataset.py  run_ablation.py  run_benchmark.py
src/: __init__.py
src/dedup/: __init__.py  deduplicator.py
src/encoders/: __init__.py  base.py  clip_encoder.py
src/evaluation/: __init__.py  benchmark.py  dataset.py  metrics.py
src/llm/: __init__.py  anthropic_client.py  base.py  factory.py  google_client.py  local_client.py  openai_client.py
src/pipeline/: __init__.py  graph.py  nodes.py  state.py
src/video/: __init__.py  loader.py  sampler.py
tests/: __init__.py  test_pipeline.py
