[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clip-llm-video"
version = "0.1.0"
description = "Zero-shot video understanding pipeline using CLIP and LLM"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Video Understanding Team"}
]
keywords = ["video", "understanding", "clip", "llm", "vision", "qa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "open-clip-torch>=2.24.0",
    "transformers>=4.36.0",
    "faiss-cpu>=1.7.4",
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "decord>=0.6.0",
    "opencv-python>=4.8.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "chainlit>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "google-generativeai>=0.3.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
eval = [
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
]

[project.scripts]
clip-llm-benchmark = "scripts.run_benchmark:main"
clip-llm-ablation = "scripts.run_ablation:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

